# NauticAnnotator

./: .gitignore  README.md
src/nautic_annotator/: CMakeLists.txt  package.xml
src/nautic_annotator/config/: params.yaml
src/nautic_annotator/launch/: nautic_annotator.launch
src/nautic_annotator/rviz/: rviz.rviz
src/nautic_annotator/scripts/: data_viewer.py  detection.py  display_time.py
src/nautic_annotator/scripts/damo/utils/: demo_utils.py
src/nautic_annotator/scripts/damo_configs/: damoyolo_tinynasL35_M.py
src/nautic_annotator/src/: nautic_annotator_node_v1.cpp  nautic_annotator_node_v2.cpp
src/pillars_feature_extractor/: CMakeLists.txt  package.xml
src/pillars_feature_extractor/scripts/: create_dataset.py
src/pillars_feature_extractor/scripts/model_exp1/: pointpillars.py
src/pillars_feature_extractor/scripts/model_exp2/: pointpillars.py
src/pillars_feature_extractor/scripts/ops/pointpillars.egg-info/: SOURCES.txt
src/pillars_reid3d/: CMakeLists.txt  package.xml
src/pillars_reid3d/config/: main.py
src/pillars_reid3d/logs/: config.yaml
src/pillars_reid3d/openunreid/models/backbones/: resnet.py
src/pillars_reid3d/openunreid/utils/: dist_utils.py
src/pillars_reid3d/scripts/: train.py  train.sh
